Bug 1898123 iOS-Safari tablet - long block detail modal title overlaps block content
Not sure why it happened as couldn't see anything in the scss that
would cause it to behave differently, but have forced the block title
to be display:block to see if it makes any difference.

behatnotneeded

--- a/htdocs/theme/raw/sass/components/_modal.scss
+++ b/htdocs/theme/raw/sass/components/_modal.scss
@@ -181,6 +181,7 @@ $width-sm: 90%;
         padding: $modal-header-padding-y $modal-header-padding-x;
         color: $modal-header-color;
         border-radius: 0;
+        display: block;
         .modal-title, a {
           margin: 0;
           padding: 0;
